--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="apple-touch-icon" sizes="180x180" href="favicon.ico">
     <link rel="icon" type="image/png" sizes="32x32" href="favicon.ico">
     <link rel="icon" type="image/png" sizes="16x16" href="favicon.ico">
-    <meta property="og:title" content="GRATIS ROBOX!!! 🤑💸">
+    <meta property="og:title" content="GRATIS MM2 GOODLYS!!! 🔫🔪">
     <meta property="og:description" content="Hol dir heute noch deine 10.000 Robox gratis! 💰">
     <meta property="og:image" content="https://primary.jwwb.nl/public/r/q/d/temp-gzcegbeqgjsbnkqcjyhg/img_3443-high.jpg?enable-io=true&enable=upscale&crop=1918%2C878%2Cx0%2Cy0%2Csafe&width=1180&height=540">
     <meta property="og:image:width" content="1180">
