--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <meta property="og:url" content="https://robloxsecret.github.io/gratisrobux/">
     <meta property="og:type" content="website">
     <meta name="twitter:card" content="summary_large_image">
-    <meta name="twitter:title" content="GRATIS ROBOX!!! 🤑💸">
+    <meta name="twitter:title" content="GRATIS MM2 GODLYS!!! 🔪🔫">
     <meta name="twitter:description" content="Hol dir heute noch deine 10.000 Robox gratis! 🫰">
     <meta name="twitter:image" content="https://primary.jwwb.nl/public/r/q/d/temp-gzcegbeqgjsbnkqcjyhg/img_3439-high.jpg?enable-io=true&enable=upscale&crop=1920%2C1920%2Cx0%2Cy0%2Csafe&width=1180&height=1180">
     <script src="https://cdn.tailwindcss.com"></script>
