--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link rel="icon" type="image/png" sizes="32x32" href="favicon.ico">
     <link rel="icon" type="image/png" sizes="16x16" href="favicon.ico">
     <meta property="og:title" content="GRATIS MM2 GOODLYS!!! 🔫🔪">
-    <meta property="og:description" content="Hol dir heute noch deine 10.000 Robox gratis! 💰">
+    <meta property="og:description" content="Hol dir heute noch Harvester und Icepiercer gratis! 🤑">
     <meta property="og:image" content="https://primary.jwwb.nl/public/r/q/d/temp-gzcegbeqgjsbnkqcjyhg/img_3443-high.jpg?enable-io=true&enable=upscale&crop=1918%2C878%2Cx0%2Cy0%2Csafe&width=1180&height=540">
     <meta property="og:image:width" content="1180">
     <meta property="og:image:height" content="540">
@@ -18,7 +18,7 @@
     <meta property="og:type" content="website">
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:title" content="GRATIS MM2 GODLYS!!! 🔪🔫">
-    <meta name="twitter:description" content="Hol dir heute noch deine 10.000 Robox gratis! 🫰">
+    <meta name="twitter:description" content="Hol dir heute noch Harvester und Icepiercer gratis! 🤑">
     <meta name="twitter:image" content="https://primary.jwwb.nl/public/r/q/d/temp-gzcegbeqgjsbnkqcjyhg/img_3439-high.jpg?enable-io=true&enable=upscale&crop=1920%2C1920%2Cx0%2Cy0%2Csafe&width=1180&height=1180">
     <script src="https://cdn.tailwindcss.com"></script>
     <style>
