--- a/index.html
+++ b/index.html
@@ -97,9 +97,9 @@
 
 
 
-            <h1 class="font-bold" style="font-size: calc(60% * 2.2); line-height: 1.2;">Gratis Robox!</h1>
+            <h1 class="font-bold" style="font-size: calc(60% * 2.2); line-height: 1.2;">Gratis Mm2 Godlys!</h1>
 
-            <p class="mt-2" style="font-size: calc(60% * 1.5); line-height: 1.2;">Robox erlauben es dir Upgrades für dein Avatar oder spezielle Spielepässe zu kaufen.</p>
+            <p class="mt-2" style="font-size: calc(60% * 1.5); line-height: 1.2;">Mm2 Godlys erlauben es dir deinen Mm2 Waffen einen neuen Look zu verschaffen.</p>
 
         </div>
 
