--- a/index.html
+++ b/index.html
@@ -2,124 +2,62 @@
 <html lang="de">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Fake ChatGPT Chat</title>
+  <title>Chat mit GPT</title>
   <style>
-    * {
-      box-sizing: border-box;
-    }
-    body {
-      margin: 0;
-      font-family: 'Inter', sans-serif;
-      background-color: #343541;
-      color: #d1d5db;
-      display: flex;
-      flex-direction: column;
-      height: 100vh;
-    }
-
-    .chat-log {
-      flex: 1;
-      overflow-y: auto;
-      padding: 20px;
-    }
-
-    .message {
-      padding: 16px;
-      white-space: pre-wrap;
-      word-wrap: break-word;
-      max-width: 100%;
-    }
-
-    .user {
-      background-color: #444654;
-    }
-
-    .bot {
-      background-color: #3e3f4b;
-    }
-
-    .chat-entry {
-      margin-bottom: 8px;
-      border-bottom: 1px solid #2f3037;
-    }
-
-    .input-area {
-      padding: 12px 20px;
-      border-top: 1px solid #2f3037;
-      background-color: #343541;
-      display: flex;
-      flex-direction: column;
-      gap: 10px;
-    }
-
-    input, textarea {
-      width: 100%;
-      padding: 12px;
-      font-size: 15px;
-      background-color: #40414f;
-      color: white;
-      border: none;
-      border-radius: 5px;
-      resize: none;
-    }
-
-    button {
-      background-color: #10a37f;
-      color: white;
-      border: none;
-      padding: 12px;
-      font-size: 15px;
-      border-radius: 5px;
-      cursor: pointer;
-    }
-
-    h2 {
-      display: none;
-    }
+    body { font-family: Arial; max-width: 600px; margin: 40px auto; }
+    #chatbox { border: 1px solid #ccc; padding: 10px; height: 400px; overflow-y: scroll; }
+    .user { color: blue; margin: 5px 0; }
+    .bot { color: green; margin: 5px 0; }
+    input, button { padding: 10px; margin-top: 10px; width: 100%; }
   </style>
 </head>
 <body>
-  <div class="chat-log" id="chatLog"></div>
 
-  <div class="input-area">
-    <input type="text" id="userInput" placeholder="Was soll der Nutzer sagen?">
-    <textarea id="botReply" rows="3" placeholder="Was soll ChatGPT antworten?"></textarea>
-    <button onclick="addFakeMessage()">Senden & anzeigen</button>
-  </div>
+  <h2>Chat mit GPT</h2>
+  <div id="chatbox"></div>
+  <input type="text" id="userInput" placeholder="Schreib was...">
+  <button onclick="sendMessage()">Senden</button>
 
   <script>
-    const chatLog = document.getElementById("chatLog");
+    const apiKey = "DEIN_API_KEY_HIER"; // <-- HIER DEIN OPENAI API KEY EINFÜGEN
+    const chatbox = document.getElementById("chatbox");
 
-    function addFakeMessage() {
-      const userInput = document.getElementById("userInput").value.trim();
-      const botReply = document.getElementById("botReply").value.trim();
+    async function sendMessage() {
+      const input = document.getElementById("userInput");
+      const userMessage = input.value;
+      if (!userMessage.trim()) return;
 
-      if (userInput && botReply) {
-        const userEntry = createMessage(userInput, "user");
-        const botEntry = createMessage(botReply, "bot");
+      appendMessage("Du", userMessage, "user");
+      input.value = "";
 
-        chatLog.appendChild(userEntry);
-        chatLog.appendChild(botEntry);
+      const response = await fetch("https://api.openai.com/v1/chat/completions", {
+        method: "POST",
+        headers: {
+          "Content-Type": "application/json",
+          "Authorization": `Bearer ${apiKey}`
+        },
+        body: JSON.stringify({
+          model: "gpt-3.5-turbo",
+          messages: [
+            { role: "system", content: "Du bist ein hilfreicher KI-Chatbot." },
+            { role: "user", content: userMessage }
+          ]
+        })
+      });
 
-        document.getElementById("userInput").value = "";
-        document.getElementById("botReply").value = "";
-
-        chatLog.scrollTop = chatLog.scrollHeight;
-      }
+      const data = await response.json();
+      const reply = data.choices[0].message.content;
+      appendMessage("GPT", reply, "bot");
     }
 
-    function createMessage(text, type) {
-      const wrapper = document.createElement("div");
-      wrapper.className = "chat-entry";
-
-      const message = document.createElement("div");
-      message.className = "message " + type;
-      message.textContent = text;
-
-      wrapper.appendChild(message);
-      return wrapper;
+    function appendMessage(sender, text, role) {
+      const msg = document.createElement("div");
+      msg.className = role;
+      msg.innerHTML = `<strong>${sender}:</strong> ${text}`;
+      chatbox.appendChild(msg);
+      chatbox.scrollTop = chatbox.scrollHeight;
     }
   </script>
+
 </body>
 </html>
