--- a/index.html
+++ b/index.html
@@ -2,93 +2,91 @@
 <html lang="de">
 <head>
   <meta charset="UTF-8">
-  <title>ChatGPT Layout</title>
+  <title>Einfacher Video Editor</title>
+  <script src="https://unpkg.com/@ffmpeg/ffmpeg@0.12.5/dist/ffmpeg.min.js"></script>
   <style>
     body {
-      margin: 0;
-      font-family: Arial, sans-serif;
-      background-color: #343541;
-      color: #d1d5db;
+      font-family: sans-serif;
+      margin: 20px;
     }
-    .sidebar {
-      width: 260px;
-      background-color: #202123;
-      height: 100vh;
-      position: fixed;
-      left: 0;
-      top: 0;
-      padding: 20px;
-      box-sizing: border-box;
+    video {
+      max-width: 100%;
+      margin-top: 10px;
     }
-    .main {
-      margin-left: 260px;
-      height: 100vh;
-      display: flex;
-      flex-direction: column;
-    }
-    .chat-container {
-      flex: 1;
-      overflow-y: auto;
-      padding: 30px;
-    }
-    .message {
-      max-width: 700px;
-      margin-bottom: 20px;
-    }
-    .user {
-      background-color: #2f2f3a;
-      padding: 15px;
-      border-radius: 8px;
-      margin-left: auto;
-    }
-    .assistant {
-      background-color: #444654;
-      padding: 15px;
-      border-radius: 8px;
-      margin-right: auto;
-    }
-    .input-bar {
-      padding: 20px;
-      border-top: 1px solid #444;
-      display: flex;
-      background-color: #343541;
-    }
-    .input-bar input {
-      flex: 1;
-      padding: 15px;
-      border-radius: 8px;
-      border: none;
-      font-size: 16px;
-      background-color: #40414f;
-      color: white;
-    }
-    .input-bar button {
-      margin-left: 10px;
-      padding: 15px 20px;
-      background-color: #10a37f;
-      color: white;
-      border: none;
-      border-radius: 8px;
-      cursor: pointer;
+    input, button {
+      margin: 5px 0;
     }
   </style>
 </head>
 <body>
-  <div class="sidebar">
-    <h2>ChatGPT</h2>
-    <p>+ Neuer Chat</p>
-    <hr style="border-color: #3e3f4b;">
-    <p>Letzte Konversation</p>
-  </div>
-  <div class="main">
-    <div class="chat-container">
-      <div class="message user">Hallo, wie geht es dir?</div>
-      <div class="message assistant">Mir geht es gut! Wie kann ich dir helfen?</div>
-    </div>
-    <div class="input-bar">
-      <input type="text" placeholder="Nachricht schreiben...">
-      <button>Senden</button>
-    </div>
-  </div>
+  <h1>🎬 Einfacher Video-Editor (Browser-basiert)</h1>
+
+  <input type="file" id="videoInput" accept="video/*"><br>
+  <video id="videoPreview" controls></video><br>
+
+  <label>Startzeit (Sekunden):</label><br>
+  <input type="number" id="startTime" value="0"><br>
+
+  <label>Endzeit (Sekunden):</label><br>
+  <input type="number" id="endTime" value="10"><br>
+
+  <label>Text-Overlay:</label><br>
+  <input type="text" id="overlayText" placeholder="Text einfügen"><br>
+
+  <button onclick="exportVideo()">🎥 Video exportieren</button>
+
+  <script>
+    const { createFFmpeg, fetchFile } = FFmpeg;
+    const ffmpeg = createFFmpeg({ log: true });
+
+    let selectedVideo;
+
+    document.getElementById('videoInput').addEventListener('change', (e) => {
+      selectedVideo = e.target.files[0];
+      const url = URL.createObjectURL(selectedVideo);
+      document.getElementById('videoPreview').src = url;
+    });
+
+    async function exportVideo() {
+      if (!selectedVideo) {
+        alert("Bitte lade ein Video hoch.");
+        return;
+      }
+
+      const start = document.getElementById('startTime').value;
+      const end = document.getElementById('endTime').value;
+      const overlayText = document.getElementById('overlayText').value;
+
+      await ffmpeg.load();
+      ffmpeg.FS('writeFile', 'input.mp4', await fetchFile(selectedVideo));
+
+      // Text-Overlay vorbereiten
+      const drawTextFilter = overlayText
+        ? `,drawtext=text='${overlayText}':fontcolor=white:fontsize=30:x=10:y=10`
+        : '';
+
+      // Video trimmen + optional Text hinzufügen
+      await ffmpeg.run(
+        '-i', 'input.mp4',
+        '-ss', start,
+        '-t', (end - start).toString(),
+        '-vf', `format=yuv420p${drawTextFilter}`,
+        '-c:v', 'libx264',
+        '-preset', 'fast',
+        '-crf', '28',
+        '-c:a', 'aac',
+        '-b:a', '128k',
+        'output.mp4'
+      );
+
+      const data = ffmpeg.FS('readFile', 'output.mp4');
+      const videoURL = URL.createObjectURL(new Blob([data.buffer], { type: 'video/mp4' }));
+
+      const a = document.createElement('a');
+      a.href = videoURL;
+      a.download = 'bearbeitetes_video.mp4';
+      a.click();
+    }
+  </script>
 </body>
 </html>
