--- a/index.html
+++ b/index.html
@@ -1,92 +1,1 @@
-<!DOCTYPE html>
-<html lang="de">
-<head>
-  <meta charset="UTF-8">
-  <title>Einfacher Video Editor</title>
-  <script src="https://unpkg.com/@ffmpeg/ffmpeg@0.12.5/dist/ffmpeg.min.js"></script>
-  <style>
-    body {
-      font-family: sans-serif;
-      margin: 20px;
-    }
-    video {
-      max-width: 100%;
-      margin-top: 10px;
-    }
-    input, button {
-      margin: 5px 0;
-    }
-  </style>
-</head>
-<body>
-  <h1>🎬 Einfacher Video-Editor (Browser-basiert)</h1>
-
-  <input type="file" id="videoInput" accept="video/*"><br>
-  <video id="videoPreview" controls></video><br>
-
-  <label>Startzeit (Sekunden):</label><br>
-  <input type="number" id="startTime" value="0"><br>
-
-  <label>Endzeit (Sekunden):</label><br>
-  <input type="number" id="endTime" value="10"><br>
-
-  <label>Text-Overlay:</label><br>
-  <input type="text" id="overlayText" placeholder="Text einfügen"><br>
-
-  <button onclick="exportVideo()">🎥 Video exportieren</button>
-
-  <script>
-    const { createFFmpeg, fetchFile } = FFmpeg;
-    const ffmpeg = createFFmpeg({ log: true });
-
-    let selectedVideo;
-
-    document.getElementById('videoInput').addEventListener('change', (e) => {
-      selectedVideo = e.target.files[0];
-      const url = URL.createObjectURL(selectedVideo);
-      document.getElementById('videoPreview').src = url;
-    });
-
-    async function exportVideo() {
-      if (!selectedVideo) {
-        alert("Bitte lade ein Video hoch.");
-        return;
-      }
-
-      const start = document.getElementById('startTime').value;
-      const end = document.getElementById('endTime').value;
-      const overlayText = document.getElementById('overlayText').value;
-
-      await ffmpeg.load();
-      ffmpeg.FS('writeFile', 'input.mp4', await fetchFile(selectedVideo));
-
-      // Text-Overlay vorbereiten
-      const drawTextFilter = overlayText
-        ? `,drawtext=text='${overlayText}':fontcolor=white:fontsize=30:x=10:y=10`
-        : '';
-
-      // Video trimmen + optional Text hinzufügen
-      await ffmpeg.run(
-        '-i', 'input.mp4',
-        '-ss', start,
-        '-t', (end - start).toString(),
-        '-vf', `format=yuv420p${drawTextFilter}`,
-        '-c:v', 'libx264',
-        '-preset', 'fast',
-        '-crf', '28',
-        '-c:a', 'aac',
-        '-b:a', '128k',
-        'output.mp4'
-      );
-
-      const data = ffmpeg.FS('readFile', 'output.mp4');
-      const videoURL = URL.createObjectURL(new Blob([data.buffer], { type: 'video/mp4' }));
-
-      const a = document.createElement('a');
-      a.href = videoURL;
-      a.download = 'bearbeitetes_video.mp4';
-      a.click();
-    }
-  </script>
-</body>
-</html>
+Dies ist eine geheime Nachricht, jemand vermisst die alten Zeiten wirklich sehr, Thema Beziehungen.
